--- a/style.css
+++ b/style.css
@@ -37,6 +37,17 @@ body{
     width: 166.6px;
     font-size: 0.1px;
     transition: all linear 0.5s;
+
+}
+@media screen and (max-width: 500px) {
+    .clks{
+        height: 125.5px;
+        width: 125.5px;
+    }
+    #tab_grid{
+        width: 380px;
+        height: 380px;
+    }
 }
 
 #p11{
@@ -106,7 +117,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-bottom: 250px;
+    padding-bottom: 0px;
 }
 
 #moves {
@@ -174,7 +185,7 @@ body{
     background: rgb(0, 0, 0, 0.6);
     
     width: 100%;
-    height: 100%;
+    height: 105vh;
     position: absolute;
     top: 0;
     left: 0;
@@ -210,7 +221,7 @@ body{
     background-image: cover;
     background-position-y: -50px;
     padding: 20px;
-    margin-right: 16px;
+    margin: 0px 5px 0px 5px;
     position: relative;
     border-radius: 20px;
     display: flex;
@@ -228,8 +239,8 @@ padding: 0px 4px;
 
 .sonido{
     position: absolute;
-    left: 175px;
-    top: 220px;
+    left: 10%;
+    top: 33%;
     background: seagreen;
     width: 70px;
     height: 70px;
@@ -243,8 +254,8 @@ padding: 0px 4px;
 
 .sonidoPlay{
     position: absolute;
-    left: 175px;
-    top: 270px;
+    left: 16%;
+    top: 33%;
     background: seagreen;
     width: 70px;
     height: 70px;
@@ -262,6 +273,7 @@ padding: 0px 4px;
 .sonidoPlay i{
     font-size: 30px;
 }
+
 
 input{
     margin: 20px auto;
@@ -292,15 +304,20 @@ input{
         background: rgb(41, 17, 17);
         }
    .sonido{
-       
+       top: 4%;
+       left: 2%;
        position:absolute;
-       top: 830px;
+       width: 40px;
+       height: 40px;
+       
        }
        .sonidoPlay{
-        bottom: 0;
+       
         position:absolute;
-        top: 830px;
-        left: 275px;
+        top: 10%;
+        left: 2%;
+        width: 40px;
+       height: 40px;
       }    
       #launch{
         margin-top: 50px; 
