--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
     grid-template-columns: auto auto auto ;
     padding: 1px;
     margin:auto;
-    margin-top: 20px;
+    margin-top: 14%;
     background-color: rgb(145, 145, 145);
     box-shadow: 10px 10px 20px rgb(0, 0, 0);
 }
